# voronenko

./: .buildinfo  .gitignore  404.html  Makefile  Pipfile  README.md  blog.html  box.txt  index.html  main.py  message.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  readme_mkdocs.md  requirements.txt  search.html  searchindex.js  sitemap.xml  tags.json
.doctrees/: environment.pickle  index.doctree
.doctrees/blog/: powershell-azure-linux.doctree
.doctrees/slides/: demo_presentation.doctree
.github/workflows/: mkdocs.yml
_static/css/: bootstrap-sitelayout.css
_static/js/: require-config.js
assets/: openpgp.min.js
blog/: 2017.html  archive.html  atom.xml  author.html  category.html  drafts.html  index.html  powershell-azure-linux.html  tag.html
blog/author/: vyacheslav.html
blog/category/: azure.html  powershell.html
blog/tag/: get-azurermsubscription.html  login-azurermaccount.html  new-selfsignedcertificate.html  select-azurermsubscription.html  test-netconnection.html
categories/: index.html
cv/: Makefile  Readme.md  build.jsonnet  connected.json  overrides.json  render_templates.py  resume.json
cv/templates/: cv-detail-about.html  cv-detail-about.html.j2  cv-detail-awards.html  cv-detail-awards.html.j2  cv-detail-education.html  cv-detail-education.html.j2  cv-detail-interests.html  (+9 more)
docs/: CNAME  box.txt  conf.py  index.html  index.md  index.rst  knock.py  message.html  short-time-consulting.md
short-time-consulting/: index.html
slides/: demo_presentation.html
theme_overrides/: cv.html  debug.html
(+115 files in other folders)
