[tool.poetry]
name = "voronenko-docs"
version = "1.0.0"
description = "Vyacheslav's notes - MkDocs documentation site"
authors = ["Vyacheslav Voronenko <slavko@voronenko.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

# Core MkDocs - upgraded from 1.4.2 to 1.6.1
mkdocs = "^1.6.1"

# Theme - upgraded from 8.5.11 to 9.7.1
mkdocs-material = "^9.7.1"

# Markdown extensions - upgraded from 9.9 to 10.20.1
pymdown-extensions = "^10.20.1"

# Plugins - upgraded to latest versions
mkdocs-macros-plugin = "^1.5.0"
mkdocs-exclude = "^1.0.2"
mkdocs-autolinks-plugin = "^0.7.1"
mknotebooks = "^0.8.0"
mkdocs-blog-plugin = "^0.25"
mkdocs-redirects = "^1.2.1"
mkdocs-simple-hooks = "^0.1.5"
mkdocs-categories-plugin = "^0.2.1"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-build-plantuml-plugin = "^1.7.4"

# Additional dependencies
plantuml-markdown = "^3.10.1"
diagrams = "^0.24.1"
fontawesome-markdown = "^0.2.6"
adr-viewer = "^1.3.0"
python-gitlab = "^4.11.1"
boto3 = "^1.35.54"

[tool.poetry.group.dev.dependencies]
# Development dependencies can be added here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
